--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "meituan-client-msite",
   "version": "0.1.0",
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx --ignore-path .gitignore .",
+    "lintfix": "eslint --ext .js,.jsx --ignore-path .gitignore . --fix"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,8 +26,13 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "prettier": "2.0.5"
   },
   "browserslist": {
     "production": [
